--- a/templates/master.html
+++ b/templates/master.html
@@ -10,6 +10,8 @@
 		<link href="{{STATIC_URL}}tablesorter/themes/my/style.css" rel="stylesheet">
 		<link href="{{STATIC_URL}}cfp.css" rel="stylesheet">
 		<script src="{{STATIC_URL}}cfp.js" type="text/javascript"></script>
+		<script src="{{STATIC_URL}}typeahead.bundle.js" type="text/javascript"></script>
+		<link href="{{STATIC_URL}}typeahead.css" rel="stylesheet">
 		<script src="{{STATIC_URL}}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="{{STATIC_URL}}tablesorter/jquery.tablesorter.min.js" type="text/javascript"></script>
 		<script src="{{STATIC_URL}}tablesorter/tablesorter.custom.js" type="text/javascript"></script>
