Allow free texts instead of linked owners as origin

--- a/templates/parcel/admin/list.html
+++ b/templates/parcel/admin/list.html
@@ -33,6 +33,8 @@
 					{% else %}
 						{{parcel.owner.projectName}}
 					{% endif %}
+				{% else %}
+					{{parcel.originText}}
 				{% endif %}
 				</td>
 				<td>{{parcel.parcelService}}</td>
