--- a/templates/sponsor/contact/list.html
+++ b/templates/sponsor/contact/list.html
@@ -1,4 +1,4 @@
-{% extends "master.html" %}
+,.{% extends "master.html" %}
 {% load url from future %}
 {% block content %}
 
@@ -6,6 +6,10 @@
 	<h2>List of sponsoring contacts</h2>
 </div>
 <ul class="nav nav-pills">
+	<li><a href="{% url 'sponsormailtemplate_list' %}" data-toggle="tooltip" title="Manage mail templates for mass mails">Mail templates</a></li>
+	<li><a href="{% url 'sponsormailattachment_list' %}" data-toggle="tooltip" title="Manage mail attachment for mass mails">Mail attachments</a></li>
+	<li><a href="{% url 'sponsormail_list' %}" data-toggle="tooltip" title="Manage mass mail sending">Mass Mails</a></li>
+
 	<li class="pull-right"><a href="{% url 'sponsorcontact_email_reset' %}" data-toggle="tooltip" title="Clear the email sending information.">Reset Email</a></li>
 	<li class="pull-right"><a href="{% url 'sponsorcontact_export_xml' %}" data-toggle="tooltip" title="Download sponsor contact data as XML">XML export</a></li>
 	<li class="pull-right"><a id="rt-import" href="#" data-toggle="tooltip" title="Reimport the reply status from RT.">Import reply status <span style="margin-left:5px" data-toggle="tooltip" class="glyphicon glyphicon-refresh"></span>
