django-templates: Rename mail templates
Rename mail templates to django templates. The db loader
engine might as well be used to serve other django pages.
This is intended to be used with the FAQ so that it can be
edited online.

--- a/templates/master.html
+++ b/templates/master.html
@@ -45,7 +45,8 @@
 										<li><a href="/sponsorcontacts/list">Sponsor contacts</a></li>
 										<li><a href="/sponsorpackages/list">Sponsor packages</a></li>
 										<li><a href="/invoice/invoices">Sponsor invoices</a></li>
-										<li><a href="/documenttemplate/lists">Document templates</a></li>
+										<li><a href="/documenttemplate/list">Document templates</a></li>
+										<li><a href="/sponsordjangotemplates/list">Django templates</a></li>
 									</ul>
 								</li>
 								<li><a href="/parcel/list">Parcel</a></li>
