--- a/templates/sponsor/contact/list.html
+++ b/templates/sponsor/contact/list.html
@@ -6,7 +6,7 @@
 	<h2>List of sponsoring contacts</h2>
 </div>
 <ul class="nav nav-pills">
-	<li><a href="{% url 'sponsormailtemplate_list' %}" data-toggle="tooltip" title="Manage mail templates for mass mails">Mail templates</a></li>
+	<li><a href="{% url 'sponsordbtemplate_list' %}" data-toggle="tooltip" title="Manage django templates for mass mails">Mail templates</a></li>
 	<li><a href="{% url 'sponsormailattachment_list' %}" data-toggle="tooltip" title="Manage mail attachment for mass mails">Mail attachments</a></li>
 	<li><a href="{% url 'sponsormail_list' %}" data-toggle="tooltip" title="Manage mass mail sending">Mass Mails</a></li>
 
