--- a/templates/sponsor/dbtemplate/update.html
+++ b/templates/sponsor/dbtemplate/update.html
@@ -6,9 +6,9 @@
 
 <div class="page-header">
 	{% if object %}
-	<h2>Edit mail template</h2>
+	<h2>Edit django template</h2>
 	{% else %}
-	<h2>Create a new mail template</h2>
+	<h2>Create a new django template</h2>
 	{% endif %}
 </div>
 
