--- a/templates/sponsor/dbtemplate/del.html
+++ b/templates/sponsor/dbtemplate/del.html
@@ -10,7 +10,7 @@
 		<form method="POST">
 			{% csrf_token %}
 			Do you really want to remove {{object.templateName}}? <br />
-			<p class="text-danger">Please note that all mails using this template become unusable by this action!</p>
+			<p class="text-danger">Please note that all sites and mails using this template become unusable by this action!</p>
 			{{form.as_p}}
 			<div class="form-actions">
 				<button type="Submit" class="btn btn-danger">Delete</button>
