--- a/templates/master.html
+++ b/templates/master.html
@@ -27,7 +27,21 @@
 			<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="container">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="/">FrOSCon</a>
+					<ul class ="nav navbar-nav">
+					<li>
+						{% if user.is_staff %}
+						<a class="navbar-brand dropdown-toggle" data-toggle="dropdown" href="#">FrOSCon {{active_year}} <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+						{% for year in all_years %}
+							<li><a href="#">{{year}}</a></li>
+						{% endfor %}
+						</ul>
+
+						{% else %}
+						<a class="navbar-brand" href="/">FrOSCon {{active_year}}</a>
+						{% endif %}
+					</li>
+					</ul>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
