Replaced FrOSCon with settings value

--- a/templates/devroom/xmlexport.html
+++ b/templates/devroom/xmlexport.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<devrooms xmlns="http://callforprojects.froscon.org/devrooms">
+<devrooms xmlns="{{INSTALL_MAIN_URL}}/devrooms">
 	{% for project in object_list %}
 		<devroom>
 			<name>{{project.projectName}}</name>
