--- a/templates/exhibitor/xmlexport.html
+++ b/templates/exhibitor/xmlexport.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<exhibitors xmlns="http://callforprojects.froscon.org/exhibitors">
+<exhibitors xmlns="{{INSTALL_MAIN_URL}}/exhibitors">
 	{% for project in object_list %}
 		<exhibitor>
 			<name>{{project.projectName}}</name>
