--- a/templates/invoice/mail/invoiceMailDE.html
+++ b/templates/invoice/mail/invoiceMailDE.html
@@ -1,6 +1,6 @@
 Sehr geehrte{% if sponsoring.contact.contactPersonGender == 'M' %}r Herr{% else %} Frau{% endif %} {{sponsoring.contact.contactPersonSurname}},
 
-anbei erhalten Sie die Rechnung für Ihr {{sponsoring.package.name}} Sponsoring auf der diesjährigen FrOSCon.
+anbei erhalten Sie die Rechnung für Ihr {{sponsoring.package.name}} Sponsoring auf der diesjährigen {{CONFERENCE_NAME}}.
 
 Bei Rückfragen stehen wir Ihnen gerne zur Verfügung
 
