--- a/templates/main/homepage.html
+++ b/templates/main/homepage.html
@@ -7,13 +7,13 @@
 
 {% if not user_exhibitors and not user_devrooms  and not user_sponsorings %}
 	<p class="lead">
-		Welcome to the FrOSCon registration interface for projects on the conference!
+		Welcome to the {{CONFERENCE_NAME}} registration interface for projects on the conference!
 	</p>
 	<p class="lead">
 		You can use this portal to register
 		<ul class="lead">
 			<li>for a booth at the conference for your project.
-			<li>for a developer room at the conference. You can use this room for any purpose that helps your project(s). This includes developer meetings as well as presentations for the guests of FrOSCon. 
+			<li>for a developer room at the conference. You can use this room for any purpose that helps your project(s). This includes developer meetings as well as presentations for the guests of {{CONFERENCE_NAME}}.
 		</ul>
 	</p>
 	<div style="text-align: center; margin-top: 50px">
