--- a/templates/master.html
+++ b/templates/master.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>FrOSCon-Exhibitors</title>
+		<title>{{CONFERENCE_NAME}}-Exhibitors</title>
 		<meta charset="utf-8" />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 		<link rel="shortcut icon" href="/static/favicon.png">
@@ -27,7 +27,7 @@
 			<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="container">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="/">FrOSCon</a>
+						<a class="navbar-brand" href="/">{{CONFERENCE_NAME}}</a>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
@@ -73,12 +73,11 @@
 				<div class="pull-left">
 				<p class="muted" style="margin-top: 20px">
 					In case of problems or questions, please contact projects (at) froscon.de
-
 				</p>
 				</div>
 				<div class="pull-right">
 				<span class ="pull-left" style="margin-top: 20px"><a href="http://www.froscon.de">www.froscon.de</a></span>
-				<img src="{{STATIC_URL}}favicon.png" class="pull-left" style="margin-top: 5px; margin-left:10px; height: 50px"  />
+				<img src="{{STATIC_URL}}favicon.png" class="pull-left" style="margin-top: 5px; margin-left:10px; height: 50px" />
 				</div>
 			</div>
 		</div>
