--- a/templates/sponsor/contact/xmlexport.html
+++ b/templates/sponsor/contact/xmlexport.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sponsorcontacts xmlns="http://callforprojects.froscon.org/sponsorcontacts">
+<sponsorcontacts xmlns="{{INSTALL_MAIN_URL}}/sponsorcontacts">
 	{% for contact in object_list %}
 		<sponsorcontact>
 			<name>{{contact.companyName}}</name>
