--- a/templates/sponsor/overview.html
+++ b/templates/sponsor/overview.html
@@ -11,9 +11,9 @@
 	<li class="pull-right active"><a href="#">Overview</a></li>
 </ul>
 
-<h3>Welcome to FrOSCon sponsor management!</h3>
+<h3>Welcome to {{CONFERENCE_NAME}} sponsor management!</h3>
 <div class="alert alert-info">
-This is FrOSCon's management system for sponsors. You can find an overview on your booked sponsoring package and provide the data we need to complete your sponsoring.</p>
+This is {{CONFERENCE_NAME}}'s management system for sponsors. You can find an overview on your booked sponsoring package and provide the data we need to complete your sponsoring.</p>
 <p>In case of any questions, please take a look at the FAQ page. In any case, please don't hesitate to contact us at <a href="mailto:{{SPONSOR_MAIL}}">{{SPONSOR_MAIL}}</a> if you have questions or need assistence with this system.</p>
 </div>
 
