--- a/templates/sponsor/package/xmlexport.html
+++ b/templates/sponsor/package/xmlexport.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sponsorPackages xmlns="http://callforprojects.froscon.org/sponsorpackages">
+<sponsorPackages xmlns="{{INSTALL_MAIN_URL}}/sponsorpackages">
 	{% for package in object_list %}
 		<package>
 			<name>{{package.name}}</name>
