--- a/templates/master.html
+++ b/templates/master.html
@@ -92,16 +92,16 @@
 		<div id="footer">
 			<div class="container">
 				<span class="pull-left" style="margin-top: 20px; margin-right: 5px">
-				FrOSCon SaBoT is 
-				<a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
-				<span style="padding-left:10px; margin-left:10px; border-left: 1px solid #999;">
-					Get/Contribute 
-					<a href="https://github.com/froscon/SaBoT"><img src="{{STATIC_URL}}GitHub-Mark-32px.png" alt="GitHub" title="GitHub" /></a>
-				</span>
+					FrOSCon SaBoT is 
+					<a href="https://www.djangoproject.com/" target="_blank"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25_grey.gif" alt="Made with Django." title="Made with Django." /></a>
+					<span style="padding-left:10px; margin-left:10px; border-left: 1px solid #999">
+						Get/Contribute 
+						<a href="https://github.com/froscon/SaBoT" target="_blank"><img src="{{STATIC_URL}}GitHub-Mark-32px.png" alt="GitHub" title="GitHub" /></a>
+					</span>
 				</span>
 				<div class="pull-right">
-				<span class ="pull-left" style="margin-top: 20px"><a href="http://www.froscon.de">www.froscon.de</a></span>
-				<img src="{{STATIC_URL}}favicon.png" class="pull-left" style="margin-top: 5px; margin-left:10px; height: 50px" />
+					<span class ="pull-left" style="margin-top: 20px"><a href="https://www.froscon.de" target="_blank">www.froscon.de</a></span>
+					<img src="{{STATIC_URL}}favicon.png" class="pull-left" style="margin-top: 5px; margin-left:10px; height: 50px" />
 				</div>
 			</div>
 		</div>
