Further email correction + github fontwaresome icon

--- a/templates/invoice/mail/invoiceMailEN.html
+++ b/templates/invoice/mail/invoiceMailEN.html
@@ -1,6 +1,6 @@
 Dear {% if sponsoring.contact.contactPersonGender == 'M' %}Mr{% else %}Ms{% endif %} {{sponsoring.contact.contactPersonSurname}}
 
-you find the invoice for your sponsoring of this year's {{CONFERENCE_NAME}} attached to this mail.
+you find the invoice for your sponsoring of this year's {{conference_name}} attached to this mail.
 
 If you have any questions, please don't hesitate to ask.
 
