invoice: Fix pk handed to downloadinvoice
The view at downloadinvoice expects the pk of the invoice
object not of the sponsoring. Fix this in the template of
the invoice list.

# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
# On branch master
# Your branch is up-to-date with 'origin/master'.
#
# Changes to be committed:
#	modified:   templates/invoice/invoices.html
#
# Untracked files:
#	sabot/prodSettings.bck
#

--- a/templates/invoice/invoices.html
+++ b/templates/invoice/invoices.html
@@ -41,7 +41,7 @@
 					{% else %}
 						<a href="{% url "invoice_create" spk=sponsoring.pk %}"><span class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Recreate an invoice for this sponsoring"></span></a>
 						{% if sponsoring.invoice.pdf %}
-							<a href="{% url 'invoice_download' pk=sponsoring.pk %}" data-toggle="tooltip" title="Download invoice pdf"><span class="glyphicon glyphicon-download"></span></a>
+							<a href="{% url 'invoice_download' pk=sponsoring.invoice.pk %}" data-toggle="tooltip" title="Download invoice pdf"><span class="glyphicon glyphicon-download"></span></a>
 							{% if sponsoring.invoice.rtTicketRef %}
 								<a href="{{RT_TICKET_URL}}{{sponsoring.invoice.rtTicketRef}}" data-toggle="tooltip" title="View invoice RT ticket"><span class="glyphicon glyphicon-list-alt"></span></a>
 							{% else %}
