invoice: Fix modal box for invoice sending
Fix typo in css class name.

--- a/templates/invoice/invoices.html
+++ b/templates/invoice/invoices.html
@@ -76,7 +76,7 @@
 
 <div id="modal-rtmail" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="Mail Content" aria-hidden="true">
 	<div class="modal-dialog" style="width: 800px">
-		<div class="modal-conhtent" style="padding: 10px">
+		<div class="modal-content" style="padding: 10px">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 				<h3>Send invoice to <span id="modal-rtmail-company"></span></h3>
