--- a/templates/sponsor/sponsoring/list.html
+++ b/templates/sponsor/sponsoring/list.html
@@ -7,6 +7,7 @@
 	<h2>List of sponsors</h2>
 </div>
 <ul class="nav nav-pills" style="margin-bottom:20px">
+	<li class="pull-right"><a href="{% url 'sponsor_export_json' %}" data-toggle="tooltip" title="Download sponsor data as JSON">JSON export</a></li>
 	<li class="pull-right"><a href="{% url 'sponsor_export_xml' %}" data-toggle="tooltip" title="Download sponsor data as XML">XML export</a></li>
 	<li class="pull-right"><a href="{% url 'sponsor_export_logos' %}" data-toggle="tooltip" title="Download all sponsor logos in an archive">Logo bulk export</a></li>
 	<li class="pull-right"><a href="{% url 'sponsor_export_programad' %}" data-toggle="tooltip" title="Download all program advertisements in an archive">Ad bulk export</a></li>
