updated public template wording to state partner, not sponsor

--- a/templates/sponsor/contact/list.html
+++ b/templates/sponsor/contact/list.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="page-header">
-	<h2>List of sponsoring contacts</h2>
+	<h2>List of partner contacts</h2>
 </div>
 <ul class="nav nav-pills">
 	<li><a href="{% url 'sponsordbtemplate_list' %}" data-toggle="tooltip" title="Manage django templates for mass mails">Mail templates</a></li>
