--- a/templates/sponsor/internalFaqPage.html
+++ b/templates/sponsor/internalFaqPage.html
@@ -3,12 +3,12 @@
 {% block content %}
 
 <div class="page-header">
-<h2>Sponsoring FAQs</h2>
+<h2>Partner FAQs</h2>
 </div>
 <ul class="nav nav-pills" style="margin-bottom: 10px">
 <li class="pull-right"><a href=".">Your data</a></li>
 <li class="pull-right active"><a href="#" data-toggle="tooltip">FAQ</a></li>
-<li class="pull-right"><a href="overview" data-toggle="tooltip" title="Overview of your sponsoring.">Overview</a></li>
+<li class="pull-right"><a href="overview" data-toggle="tooltip" title="Overview of your partnership.">Overview</a></li>
 </ul>
 
 {% include "sponsor/publicFaq.html" %}
