--- a/templates/sponsor/publicFaqPage.html
+++ b/templates/sponsor/publicFaqPage.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="page-header">
-<h1>{{CONFERENCE_NAME}} Sponsoring FAQs</h1>
+<h1>{{CONFERENCE_NAME}} Partner FAQs</h1>
 </div>
 
 {% include "sponsor/publicFaq.html" %}
