--- a/templates/sponsor/sponsoring/list.html
+++ b/templates/sponsor/sponsoring/list.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="page-header">
-	<h2>List of sponsors</h2>
+	<h2>List of partners</h2>
 </div>
 <ul class="nav nav-pills" style="margin-bottom:20px">
 	<li class="pull-right"><a href="{% url 'sponsor_export_json' %}" data-toggle="tooltip" title="Download sponsor data as JSON">JSON export</a></li>
@@ -71,7 +71,7 @@
 <table class="table table-bordered table-hover tablesorter">
 	<thead>
 		<tr>
-			<th>Sponsor</th>
+			<th>Partner</th>
 			<th>Display name</th>
 			<th>RT</th>
 			<th>Contact</th>
