--- a/templates/master.html
+++ b/templates/master.html
@@ -61,12 +61,12 @@
 								<li class="divider divider-vertical"></li>
 								<li><a href="/accounts/list">Users</a></li>
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sponsoring <b class="caret"></b></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Partner <b class="caret"></b></a>
 									<ul class="dropdown-menu">
-										<li><a href="/sponsors/list">Sponsorlist</a></li>
-										<li><a href="/sponsorcontacts/list">Sponsor contacts</a></li>
-										<li><a href="/sponsorpackages/list">Sponsor packages</a></li>
-										<li><a href="/invoice/invoices">Sponsor invoices</a></li>
+										<li><a href="/sponsors/list">Partnerlist</a></li>
+										<li><a href="/sponsorcontacts/list">Partner contacts</a></li>
+										<li><a href="/sponsorpackages/list">Partner packages</a></li>
+										<li><a href="/invoice/invoices">Partner invoices</a></li>
 										<li><a href="/documenttemplate/list">Document templates</a></li>
 										<li><a href="/sponsordjangotemplates/list">Django templates</a></li>
 									</ul>
