adds invoice status column

--- a/templates/invoice/invoices.html
+++ b/templates/invoice/invoices.html
@@ -8,6 +8,7 @@
 <table class="table table-bordered table-hover tablesorter">
 	<thead>
 		<tr>
+			<th>Status</th>
 			<th>Company</th>
 			<th>Invoice no.</th>
 			<th>Amount</th>
@@ -19,6 +20,7 @@
 	<tbody>
 		{% for sponsoring in object_list %}
 			<tr {% if sponsoring.invoice.payed %}class="success"{% endif %}{% if not sponsoring.invoice.payed and sponsoring.invoice.dueDate < today %}class="danger"{% endif %}>
+				<td>{% if sponsoring.invoice.payed %}Complete{% elif not sponsoring.invoice.payed and sponsoring.invoice.dueDate < today %}Overdue{% else %}Pending{% endif %}</td>
 				<td><a href="{% url 'sponsorcontact_update' pk=sponsoring.contact.pk %}">{{sponsoring.contact.companyName}}</a></td>
 				<td>{{sponsoring.invoice.invoiceNumber}}</td>
 				<td>{{sponsoring.invoice.invoiceAmount}}{% if sponsoring.invoice %}€{% endif %}</td>
